feat: 展开式预测卡片 - 去除轮播，动态赔率，实时数据

--- a/src/locales/en/market.json
+++ b/src/locales/en/market.json
@@ -71,5 +71,25 @@
     "empty": "Whale activity updates every few minutes.",
     "entry": "{{user}} placed {{amount}} TAI {{direction}} on {{market}}.",
     "title": "Whale alerts"
+  },
+  "yes": "Yes",
+  "no": "No",
+  "pool": {
+    "label": "Total Pool"
+  },
+  "odds": {
+    "label": "Live Odds"
+  },
+  "bet": {
+    "amountLabel": "Bet Amount (TAI)",
+    "confirm": "Confirm Bet",
+    "submitting": "Submitting...",
+    "projected": "Projected Return"
+  },
+  "live": {
+    "totalBets": "Total Bets",
+    "volume": "Volume",
+    "bettors": "Bettors",
+    "recentBets": "Recent Bets"
   }
 }
