--- a/src/locales/en/market.json
+++ b/src/locales/en/market.json
@@ -91,5 +91,9 @@
     "volume": "Volume",
     "bettors": "Bettors",
     "recentBets": "Recent Bets"
+  },
+  "balance": {
+    "label": "TAI Balance",
+    "todayProfit": "Today's Profit"
   }
 }
