feat: add logo animation with pure CSS rotation and breathing effect

--- a/src/locales/en/assets.json
+++ b/src/locales/en/assets.json
@@ -11,16 +11,58 @@
   "myRedPacket": "My Red Packets",
   "redPacketClaimed": "Claimed/Total",
   "claimRedPacket": "Claim Packet",
-  "myTitles": "My Titles",
-  "currentTitle": "Current Title",
-  "nextTitle": "Next Unlock",
-  "myAvatars": "Avatar Market",
-  "ownedAvatars": "Owned Avatars",
-  "openBlindBox": "Open Blind Box",
   "myHistory": "Prediction History",
   "viewHistory": "View History",
   "winRate": "Win Rate",
   "totalProfit": "Total Profit",
   "createPrediction": "Create Prediction",
-  "viewRanking": "View Ranking"
+  "viewRanking": "View Ranking",
+  "assetTrend": "Asset Trend",
+  "hour": "Hour",
+  "day": "Day",
+  "week": "Week",
+  "month": "Month",
+  "high": "High",
+  "low": "Low",
+  "profit": "Profit",
+  "shareToTelegram": "Share to Telegram",
+  "shareToX": "Share to X",
+  "downloadImage": "Download Image",
+  "downloadSuccess": "Image downloaded successfully",
+  "trend": {
+    "hour": "Hour",
+    "day": "Day",
+    "week": "Week",
+    "month": "Month",
+    "high": "High",
+    "low": "Low",
+    "forecastProfit": "Forecast Profit",
+    "yesterday": "Yesterday",
+    "today": "Today",
+    "thisWeek": "This Week",
+    "thisMonth": "This Month"
+  },
+  "depositTitle": "Deposit TAI",
+  "withdrawTitle": "Withdraw TAI",
+  "exchangeTitle": "Exchange Assets",
+  "amount": "Amount",
+  "from": "From",
+  "to": "To",
+  "withdrawAddress": "Withdraw Address",
+  "exchangeRate": "Exchange Rate",
+  "youWillGet": "You Will Get",
+  "fee": "Fee",
+  "finalAmount": "Final Amount",
+  "transactionWarning": "Please verify transaction details carefully. Transactions cannot be reversed once submitted",
+  "continue": "Continue",
+  "confirmTransaction": "Please confirm transaction details",
+  "type": "Type",
+  "receive": "Receive",
+  "back": "Back",
+  "confirm": "Confirm",
+  "transactionSuccess": "Transaction Successful",
+  "transactionProcessing": "Transaction is being processed, please wait...",
+  "errors": {
+    "amount": "Please enter a valid amount"
+  }
 }
