--- a/src/locales/zh/assets.json
+++ b/src/locales/zh/assets.json
@@ -11,16 +11,58 @@
   "myRedPacket": "我的红包",
   "redPacketClaimed": "已领取/总份数",
   "claimRedPacket": "领取红包",
-  "myTitles": "我的称谓",
-  "currentTitle": "当前称谓",
-  "nextTitle": "下一解锁",
-  "myAvatars": "头像市场",
-  "ownedAvatars": "已拥有头像",
-  "openBlindBox": "打开盲盒",
   "myHistory": "历史预测",
   "viewHistory": "查看历史",
   "winRate": "胜率",
   "totalProfit": "总收益",
   "createPrediction": "创建预测",
-  "viewRanking": "查看榜单"
+  "viewRanking": "查看榜单",
+  "assetTrend": "资产趋势",
+  "hour": "时",
+  "day": "日",
+  "week": "周",
+  "month": "月",
+  "high": "最高",
+  "low": "最低",
+  "profit": "预测收益",
+  "shareToTelegram": "分享到 Telegram",
+  "shareToX": "分享到 X",
+  "downloadImage": "下载图片",
+  "downloadSuccess": "图片下载成功",
+  "trend": {
+    "hour": "时",
+    "day": "日",
+    "week": "周",
+    "month": "月",
+    "high": "最高",
+    "low": "最低",
+    "forecastProfit": "预测收益",
+    "yesterday": "昨日",
+    "today": "今天",
+    "thisWeek": "本周",
+    "thisMonth": "本月"
+  },
+  "depositTitle": "充值 TAI",
+  "withdrawTitle": "提现 TAI",
+  "exchangeTitle": "兑换资产",
+  "amount": "数量",
+  "from": "从",
+  "to": "到",
+  "withdrawAddress": "提现地址",
+  "exchangeRate": "兑换汇率",
+  "youWillGet": "您将获得",
+  "fee": "手续费",
+  "finalAmount": "实际到账",
+  "transactionWarning": "请仔细核对交易信息，交易一旦提交将无法撤销",
+  "continue": "继续",
+  "confirmTransaction": "请确认交易信息",
+  "type": "类型",
+  "receive": "接收",
+  "back": "返回",
+  "confirm": "确认",
+  "transactionSuccess": "交易成功",
+  "transactionProcessing": "交易正在处理中，请稍候...",
+  "errors": {
+    "amount": "请输入有效金额"
+  }
 }
