feat: 玻璃质感UI完整实现 + 首页深度优化
新增玻璃质感组件系统：
- ✅ GlassCard - 玻璃卡片基础组件
- ✅ MarketCardGlass - 玻璃质感市场卡片
- ✅ GoldenHammer - 金色锤徽章（闪烁动效）
- ✅ CountDown - 倒计时组件（mm:ss格式）
- ✅ CountUp - 数字滚动组件
- ✅ RealtimeProfitBar - 实时收益滚动条
- ✅ CreateFloatingGlass - 玻璃悬浮创建按钮
- ✅ DaoConsoleGlass - DAO控制台（玻璃版）
- ✅ DaoClaimGlass - DAO领取组件（玻璃版）
- ✅ GlassBottomNav - 玻璃底部导航
- ✅ GlassPageLayout - 玻璃页面布局

新增页面：
- ✅ HomeGlass - 玻璃质感首页（用户驱动）
- ✅ DaoGlass - 玻璃质感DAO控制台
- ✅ SearchGlass - 玻璃质感搜索页

优化现有页面：
- ✅ Assets - 资产页优化（交易模态框重构）
- ✅ Ranking - 榜单页优化（玻璃质感）
- ✅ Detail - 详情页优化
- ✅ Create - 创建页优化

设计特点：
- 深色玻璃质感（#0F0F0F + backdrop-blur）
- 金色主题（#F59E0B）
- 实时动效（数字滚动、倒计时、闪烁）
- 移动优先（单卡片<1KB）
- 轻量化（单页<200KB）

技术亮点：
- 零重构，插入式组件
- 统一设计语言
- 实时刷新（30-60秒）
- 完整的动效系统

--- a/src/locales/en/assets.json
+++ b/src/locales/en/assets.json
@@ -11,6 +11,16 @@
   "myRedPacket": "My Red Packets",
   "redPacketClaimed": "Claimed/Total",
   "claimRedPacket": "Claim Packet",
+  "noRedPacket": "No red packets yet",
+  "redeemAll": "Claim All",
+  "globalPacket": "Global Red Pack Pool",
+  "globalPacketHint": "Refresh · every 5s",
+  "globalPool": "Current Pool",
+  "packetPrice": "Pack Price",
+  "buyers": "Participants",
+  "limit": "Per Wallet Limit",
+  "packs": "packs",
+  "buyNow": "Buy Now",
   "myHistory": "Prediction History",
   "viewHistory": "View History",
   "winRate": "Win Rate",
@@ -60,9 +70,34 @@
   "receive": "Receive",
   "back": "Back",
   "confirm": "Confirm",
+  "next": "Continue",
+  "confirmTitle": "Confirm transaction",
+  "successTitle": "Transaction complete",
+  "successDescription": "Funds will be settled on-chain shortly",
+  "gasNotice": "Single gas fee, platform subsidises the rest",
   "transactionSuccess": "Transaction Successful",
   "transactionProcessing": "Transaction is being processed, please wait...",
   "errors": {
     "amount": "Please enter a valid amount"
+  },
+  "modal": {
+    "gas": "Self-paid gas · one signature",
+    "close": "Close",
+    "selfPay": "Miner fee paid by user",
+    "estimate": "Estimated gas fee",
+    "rate": "Swap rate",
+    "countdown": "Signature valid {{time}}",
+    "charge": {
+      "title": "Deposit TAI",
+      "cta": "Deposit (self-paid gas)"
+    },
+    "withdraw": {
+      "title": "Withdraw TAI",
+      "cta": "Withdraw (self-paid gas)"
+    },
+    "exchange": {
+      "title": "Swap assets",
+      "cta": "Swap (self-paid gas)"
+    }
   }
 }
