--- a/src/locales/en/nav.json
+++ b/src/locales/en/nav.json
@@ -1,6 +1,7 @@
 {
   "home": "Home",
   "earnings": "Earnings",
+  "dao": "DAO",
   "create": "Create",
   "ranking": "Ranking",
   "assets": "Assets"
