feat: Complete project implementation with DAO, invite, ranking systems
- Add DAO pool and fee distribution system
- Implement invite and ranking features with real-time updates
- Complete red packet system with TON payment integration
- Add Telegram bot with admin and user commands
- Implement smart contracts (TAI Master and Vesting)
- Add comprehensive database migrations
- Complete frontend with glass morphism design
- Add multi-language support (zh/en)
- Implement TON wallet integration
- Add development and testing scripts
- Update documentation and deployment guides

--- a/locales/src/locales/en/common.json
+++ b/locales/src/locales/en/common.json
@@ -13,5 +13,9 @@
       "title": "No Data",
       "description": "No records found yet. Start your first prediction."
     }
-  }
+  },
+  "countdown": {
+    "ended": "Ended"
+  },
+  "close": "Close"
 }
