--- a/locales/src/locales/zh/common.json
+++ b/locales/src/locales/zh/common.json
@@ -13,5 +13,9 @@
       "title": "暂无数据",
       "description": "当前没有相关记录，开始你的第一次预测吧。"
     }
-  }
+  },
+  "countdown": {
+    "ended": "已结束"
+  },
+  "close": "关闭"
 }
